src/assets/less/critical.less
// ─────────────────────────────────────────────────────────────────────────────
// CRITICAL PAGE STYLES
// Above-the-fold and high-priority styles for the home page's landing section.
// Put the first section of the home page in here, so it loads immediately.
// The rest of the home page styles in local.css will be deferred and
// ─────────────────────────────────────────────────────────────────────────────

/*-- -------------------------- -->
<---           Hero             -->
<--- -------------------------- -*/

/* Mobile - 360px */
@media only screen and (min-width: 0rem) {
    #hero-1203 {
        /* 150px - 350px */
        padding: clamp(9rem, 25.95vw, 21.875rem) (16/16rem);
        padding-bottom: 0;
        position: relative;
        z-index: 1;
        /* prevents overflow from the arrow graphic */
        overflow: hidden;


        &:before {
            /* black bar */
            content: "";
            width: 100%;
            /* 100px - 200px */
            height: clamp(6.25rem, 29vw, 12.5rem);
            background: #1a1a1a;
            opacity: 1;
            position: absolute;
            display: block;
            bottom: 0;
            left: 0;
        }


        .cs-container {
            width: 100%;
            max-width: (1280/16rem);
            margin: auto;
            position: relative;
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;
            /* 48px - 64px */
            gap: clamp(3rem, 7vw, 4rem);
        }

        .cs-content {
            /* set text align to left if content needs to be left aligned */
            text-align: center;
            width: 100%;
            max-width: (630/16rem);
            display: flex;
            flex-direction: column;
            /* centers content horizontally, set to flex-start to left align */
            align-items: center;
        }

        .cs-topper {
            font-size: var(--topperFontSize);
            line-height: 1.2em;
            text-transform: uppercase;
            text-align: center;
            letter-spacing: 0.1em;
            font-weight: 700;
            color: var(--primary);
            margin-bottom: (4/16rem);
            display: block;
        }

        h1.cs-title,
        section h1.cs-title,
        article h1.cs-title {
            font-size: clamp(2.4375rem, 6.4vw, 3.8125rem);
            font-weight: 900;
            line-height: 1.2em;
            width: 100%;
            max-width: 17ch;
            margin: 0 0 1rem; /* replace (16/16rem) with 1rem */
            color: var(--headerColor);
            position: relative;
        }




        .cs-text {
            font-size: (20/16rem);
            line-height: 1.5em;
            width: 100%;
            max-width: (700/16rem);
            /* 28px - 40px */
            margin: 0 0 clamp(1.75rem, 4vw, 2.5rem);
            color: var(--bodyTextColor);
        }

        .cs-button-solid {
            font-size: (16/16rem);
            text-align: center;
            /* 46px - 56px */
            line-height: clamp(2.875rem, 5.5vw, 3.5rem);
            width: (180/16rem);
            text-decoration: none;
            font-weight: 700;
            /* clips corners of the before element */
            overflow: hidden;
            margin: 0;
            color: #1a1a1a;
            padding: 0;
            background-color: var(--primary);
            display: inline-block;
            position: relative;
            z-index: 1;
            transition: color 0.3s;

            &:before {
                content: "";
                position: absolute;
                display: block;
                height: 100%;
                width: 0%;
                background: #000;
                opacity: 1;
                top: 0;
                left: 0;
                z-index: -1;
                transition: width 0.3s;
            }

            &:hover {
                color: #fff;
                &:before {
                    width: 100%;
                }
            }
        }

        .cs-picture {
            width: 100%;
            /* changes to 866px at desktop */
            max-width: (545/16rem);
            height: auto;
            display: flex;
            align-items: flex-end;
            position: relative;

            img {
                width: 100%;
                height: auto;
            }
        }

        .cs-floater {
            /* changes to 1465px at desktop */
            width: (955/16rem);
            height: auto;
            opacity: 0.12;
            display: block;
            position: absolute;
            right: 0;
            top: 40%;
            z-index: -1;
        }
    }
}

/* Desktop - 1024px */
@media only screen and (min-width: 64rem) {
    #hero-1203 {
        &:before {
            height: (258/16rem);
        }
        .cs-picture {
            width: 70%;
            max-width: (866/16rem);
        }

        .cs-floater {
            width: (1465/16rem);
            top: 30%;
        }
    }
}

/* Large Desktop - 1300px */
@media only screen and (min-width: 81.25rem) {
    #hero-1203 {
        padding-bottom: (200/16rem);

        &:before {
            height: 100%;
            width: 40vw;
            margin-left: (333/16rem);
            left: 50%;
        }

        .cs-container {
            flex-direction: row;
            justify-content: flex-start;
            /* remove the positioning so the cs-picture is now absolutely positioned to the next parent with a declared position - the #hero section container. Now we can position it off the bottom edge of the parent container */
            position: initial;
        }

        .cs-content {
            text-align: left;
            align-items: flex-start;
        }

        .cs-picture {
            width: (866/16rem);
            height: (842/16rem);
            margin-left: (10/16rem);
            position: absolute;
            left: 50%;
            bottom: 0;

            img {
                bottom: 0;
                left: 0;
                width: 100%;
                height: 100%;
                position: absolute;
                object-fit: contain;
            }
        }

        .cs-floater {
            margin-right: (-333/16rem);
            top: (140/16rem);
            right: 50%;
        }
    }
}

                                
/*-- -------------------------- -->
<---          Services          -->
<--- -------------------------- -*/

/* Mobile - 360px */
@media only screen and (min-width: 0rem) {
    #services-597 {
        padding: var(--sectionPadding);
        overflow: hidden;

        .cs-container {
            width: 100%;
            /* changes to 1280px at tablet */
            max-width: (550/16rem);
            margin: auto;
            display: flex;
            flex-direction: column;
            align-items: center;
            gap: (48/16rem);
        }

        .cs-content {
            /* set text aling to left if content needs to be left aligned */
            text-align: center;
            width: 100%;
            display: flex;
            flex-direction: column;
            /* centers content horizontally, set to flex-start to left align */
            align-items: center;
        }

        .cs-card-group {
            width: 100%;
            margin: 0;
            /* 36px - 80px top & bottom */
            /* 24px - 88px right & left */
            padding: clamp(2.25rem, 6vw, 5rem) clamp(1.5rem, 6.4vw, 5.5rem);
            background-color: #fff;
            box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.1);
            /* prevents padding and border from affecting height and width */
            box-sizing: border-box;
            display: flex;
            flex-direction: column;
            gap: (20/16rem);
            /* 32px - 64px */
            row-gap: clamp(2rem, 7vw, 4rem);
        }

        .cs-item {
            text-align: left;
            list-style: none;
            display: flex;
            flex-direction: column;
            align-items: flex-start;
            gap: (16/16rem);
        }

        .cs-h3 {
            /* 20px - 25px */
            font-size: clamp(1.25rem, 3vw, 1.5625rem);
            line-height: 1.2em;
            font-weight: 700;
            margin: 0;
            color: var(--headerColor);
        }

        .cs-item-text {
            /* 14px - 16px */
            font-size: clamp(0.875rem, 3vw, 1rem);
            line-height: 1.5em;
            font-weight: 400;
            margin: 0;
            color: var(--bodyTextColor);
        }
    }
}

/* Tablet - 768px */
@media only screen and (min-width: 48rem) {
    #services-597 {
        .cs-container {
            max-width: (1280/16rem);
        }

        .cs-card-group {
            flex-direction: row;
            flex-wrap: wrap;
            justify-content: space-between;
            /* 48px - 64px */
            row-gap: clamp(3rem, 6vw, 4rem);
        }

        .cs-item {
            width: 31%;
        }
    }
}

                                

